# AirflowCronAPI

./: docker-compose.yml  dockerfile  main.py  pyproject.toml  readme.md  test.txt
dags/: cronTrigger.py
dags/sql/: selectPriorityOne.sql
