[tool.poetry]
name = "hello_fastApi_ws"
version = "0.1.0"
description = ""
authors = ["Alayappan <kamalesh@ngpwebsmart.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
